--- a/fe/pom.xml
+++ b/fe/pom.xml
@@ -699,6 +699,17 @@ under the License.
                 <artifactId>hadoop-aws</artifactId>
                 <version>${hadoop.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.zaxxer</groupId>
+                <artifactId>HikariCP</artifactId>
+                <version>4.0.3</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>5.1.47</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
